--- a/package.json
+++ b/package.json
@@ -18,19 +18,22 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@react-pdf/renderer": "^3.1.13",
     "clsx": "^1.2.1",
     "lucide-react": "^0.260.0",
     "next": "^13.5.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
+    "react-to-pdf": "^1.0.1",
+    "react-to-print": "^2.14.15",
     "tailwind-merge": "^1.14.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^16.3.0",
     "@commitlint/config-conventional": "^16.2.4",
-    "@tailwindcss/forms": "^0.5.6",
     "@svgr/webpack": "^8.1.0",
+    "@tailwindcss/forms": "^0.5.6",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@types/react": "^18.2.25",
