--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
+    "react-markdown": "^9.0.0",
     "react-to-pdf": "^1.0.1",
     "react-to-print": "^2.14.15",
     "tailwind-merge": "^1.14.0"
