--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "clsx": "^1.2.1",
     "lucide-react": "^0.260.0",
     "next": "^13.5.4",
+    "raw-loader": "^4.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
