--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ts-nextjs-tailwind-starter",
-  "version": "0.1.0",
+  "name": "cv-maker",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev --port 3004",
@@ -18,7 +18,6 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@react-pdf/renderer": "^3.1.13",
     "clsx": "^1.2.1",
     "lucide-react": "^0.260.0",
     "next": "^13.5.4",
