--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jspdf": "^2.5.1",
     "lucide-react": "^0.291.0",
     "next": "^14.0.1",
+    "puppeteer": "^22.1.0",
     "raw-loader": "^4.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
